# cyclicdb: examples

AM_CXXFLAGS = -I../src

noinst_PROGRAMS = store01_create_memory store02_create_file


store01_create_memory_SOURCES = store01_create_memory.cpp
store01_create_memory_LDADD = ../src/libcyclicstore.la

store02_create_file_SOURCES = store02_create_file.cpp
store02_create_file_LDADD = ../src/libcyclicstore.la
